Database and API Response Objects are Seperated for managing them seperately to avoid the dependency between then
