# docs/swagger.json
@@ -47,7 +47,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Product"
+                                "$ref": "#/definitions/model.ProductResponse"
                             }
                         }
                     },
@@ -78,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Product"
+                            "$ref": "#/definitions/model.ProductCreateRequest"
                         }
                     }
                 ],
@@ -86,7 +86,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Product"
+                            "$ref": "#/definitions/model.ProductResponse"
                         }
                     },
                     "400": {
@@ -130,7 +130,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Product"
+                            "$ref": "#/definitions/model.ProductResponse"
                         }
                     },
                     "404": {
@@ -173,7 +173,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Product"
+                            "$ref": "#/definitions/model.ProductUpdateRequest"
                         }
                     }
                 ],
@@ -181,7 +181,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Product"
+                            "$ref": "#/definitions/model.ProductResponse"
                         }
                     },
                     "400": {
@@ -251,7 +251,7 @@
                 }
             }
         },
-        "model.Product": {
+        "model.ProductCreateRequest": {
             "type": "object",
             "properties": {
                 "brand": {
@@ -260,13 +260,59 @@
                 "category": {
                     "type": "string"
                 },
-                "id": {
+                "price": {
                     "type": "integer"
                 },
-                "name": {
+                "product_name": {
                     "type": "string"
                 },
-                "subCategory": {
+                "sub_category": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ProductResponse": {
+            "type": "object",
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "sub_category": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ProductUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "sub_category": {
                     "type": "string"
                 }
             }
